Update tests
Signed-off-by: Hai Yan <oeyh@amazon.com>